fixed layout bugs

--- a/src/components/MainBlock/MainBlock.module.css
+++ b/src/components/MainBlock/MainBlock.module.css
@@ -62,6 +62,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .main-block {
+    margin-top: 150px;
+  }
   .content {
     max-width: 370px;
   }
@@ -84,6 +87,7 @@
 
 @media screen and (max-width: 580px) {
   .main-block {
+    margin-top: 68px;
     height: 100%;
     flex-direction: column;
     align-items: flex-start;
